
--> See TODO.txt

Check:
- Demo -> Test?  E.g. DemoI? DemoSpace(-Stress)? DemoStep? ....

Bug: Dropping first box on Heightfield is wrong.
  -> Cylinder is also often iffy, but that is the same in C++  -> e.g. 7. cylinder (java) or 11th (c++)!

0.6.0
=====
- TODO remove deprecations for 0.6.0

0.5.0 (unreleased)
=====
- DVector3/DQuaternion/...: Better support for call chaining, added isEq(x, y, z, eps) and deprecated clone() and
  DQuaternion.*Euler*().
  [#108](https://github.com/tzaeschke/ode4j/pull/108)
- DVector3/DQuaternion/...: Deprecated hashCode(). [#107](https://github.com/tzaeschke/ode4j/pull/107)
- Removed unnecessary ObjArray from heightfield. [#106](https://github.com/tzaeschke/ode4j/pull/106)
- Added linter and fixed some lint. [#105](https://github.com/tzaeschke/ode4j/pull/105)
- Cleaned up Junit 3 style tests. [#104](https://github.com/tzaeschke/ode4j/pull/104)
- Moved tests into core/core-cpp. [#103](https://github.com/tzaeschke/ode4j/pull/103)
- Cleaned up unit test output. [#102](https://github.com/tzaeschke/ode4j/pull/102)
- Fix maven warnings of type "Use Import/Export Package directive -split-package [...]"
  [#101](https://github.com/tzaeschke/ode4j/pull/101)
- Port updates until 0.16.3. [#100](https://github.com/tzaeschke/ode4j/pull/100)
- Port updates until 0.16.2.
  This includes some libCCD updates missing fro the 0.15.1 update.
  This excludes improved solution finders with anything from *Cooperative* and ThreadedEquationSolverLDLT*.
  [#97](https://github.com/tzaeschke/ode4j/pull/97)
- Added GutHub Actions CI builds for Java 8 and 9. [#95](https://github.com/tzaeschke/ode4j/pull/95)
- Added default logger for demos and tests. [#94](https://github.com/tzaeschke/ode4j/pull/94)
- Added Android API compliance checker, now for API level 24 (the lowest that ode4j passed without changes)
  [#93](https://github.com/tzaeschke/ode4j/pull/93)
- Updated maven dependencies [#92](https://github.com/tzaeschke/ode4j/pull/92)